...
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.cmsc355.hungr.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageButton
        android:id="@+id/getFoodButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
...
