...
        android:layout_centerHorizontal="true"
        android:layout_below="@id/restaurantImageView"
        />
    <Button
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:id="@+id/mockitoNavigationButton"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="mockitoScrollDown"
        />
</RelativeLayout>
