<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_show_recommendation_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.cmsc355.hungr.ShowRecommendationInfoActivity"
    tools:showIn="@layout/activity_show_recommendation_info">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sriRestaurantName"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textSize="25dp"
        />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/sriImageView"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/sriRestaurantName"
        />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/sriAddressP1"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/sriImageView"
    android:textSize="25dp"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sriAddressP2"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/sriAddressP1"
        android:textSize="25dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sriPhoneNumber"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/sriAddressP2"
        android:textSize="25dp"
        android:textColor="@color/wallet_link_text_light"
        android:textStyle="bold"
        android:onClick="onPhoneNumberClick"
        />

    <Button
        android:drawableEnd="@drawable/yelp_logo_scaled"
        android:drawableRight="@drawable/yelp_logo_scaled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/yelpButton"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/sriPhoneNumber"
        android:text=" View On "
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/sriAverageReviewIcon"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/yelpButton"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sriAverageReviewIcon">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sriExampleReview"
            android:textSize="25dp"
            android:onClick="clickSampleReview"
            />

    </ScrollView>

</RelativeLayout>
